# picocolorsensorspi

./: CMakeLists.txt  LICENSE.txt  picocolorsensorspi.c  spi.pio
controller/: spi_controller.c  spi_controller.h
pio/: pio_spi.pio  stretched_spi.pio
pio_spi/: pio_spi.c  pio_spi.h  pio_spi.pio
segger/: SEGGER_RTT.h
src/: core1.cpp  picocolorsensorspi.c  pio_spi.c  pio_spi.h  stretched_spi.c  stretched_spi.h
